@@ -1711,16 +1711,20 @@ BenchmarkImageCommand(ImageInfo *image_info,
       double
         elapsed_time;
 
+      long
+	threads_limit;
+
       /* resolution=GetTimerResolution(); */
       user_time=GetUserTime(&timer);
       elapsed_time=GetElapsedTime(&timer);
       rate_total=(((double) iteration)/elapsed_time);
       rate_cpu=(((double) iteration)/user_time);
+      threads_limit=(long) GetMagickResourceLimit(ThreadsResource);
       (void) fflush(stdout);
       (void) fprintf(stderr,
-		     "Results: %ld iter %.2fs user %.2fs total %.3f iter/s "
+		     "Results: %ld threads %ld iter %.2fs user %.2fs total %.3f iter/s "
 		     "(%.3f iter/s cpu)\n",
-		     iteration,user_time,elapsed_time,rate_total,rate_cpu);
+		     threads_limit,iteration,user_time,elapsed_time,rate_total,rate_cpu);
       (void) fflush(stderr);
     }
   }
